<resources>
    <string name="app_name">스캐치</string>

    <!-- Strings related to login -->
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login_mail">이메일(계정 인증/아이디 or 비밀번호 찾기)</string>
    <string name="login_name">이름</string>
    <string name="login_nick">닉네임</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="title_activity_maps">Map</string>
</resources>
