<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.kimdongun.paintchat.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="회원가입"/>
        <View
            android:layout_height="3dip"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <AutoCompleteTextView
                    android:id="@+id/editText_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_id_check"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimary"
                android:textStyle="normal|bold"
                android:textSize="10sp"
                android:text="중복\n확인" />
        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:maxLength="20"
                android:singleLine="true"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <AutoCompleteTextView
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_mail"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="50"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_email_check"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="중복\n확인"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4">

                <AutoCompleteTextView
                    android:id="@+id/editText_nick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_nick"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_nick_check"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorPrimary"
                android:textStyle="normal|bold"
                android:textSize="10sp"
                android:text="중복\n확인" />
        </LinearLayout>
        <View
            android:layout_height="3dip"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:backgroundTint="@color/colorPrimary"
            android:textStyle="normal|bold"
            android:textSize="10sp"
            android:text="회원 가입"/>
    </LinearLayout>

</RelativeLayout>