<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kimdongun.paintchat.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:textSize="70sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            android:text="스캐치"/>
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp">

        <LinearLayout
            android:id="@+id/layout_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:gravity="end">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/editText_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_id"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editText_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="18sp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="로\n그\n인"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/textView_find_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="아이디"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView_find_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="비밀번호 찾기"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_registration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="회원 가입"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorPrimary"
            android:layout_below="@+id/layout_account"/>

        <Button
            android:id="@+id/button_login_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="구글 계정으로 로그인"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorGoogleLogin"
            android:layout_below="@+id/button_registration"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="페이스북 계정으로 로그인"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorFacebookLogin"
            android:layout_below="@+id/button_login_google"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>

